--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <title>MY RESUME</title>
-    <meta charset=utf-8>
-    <meta name="keywords"content=Isha Mishra, resume>
-    <meta name='description'>
-    <link rel="stylesheet" href="css/style.css" 
-          type="text/css">
-</html>head>
+    <head>
+        <title>MY RESUME</title>
+        <meta charset=utf-8>
+        <meta name="keywords"content=Isha Mishra, resume>
+        <meta name='description'>
+        <link rel="stylesheet" href="css/style.css" 
+              type="text/css">
+    </head>
+   
+
 <body>
-<div id="box">
+    <div id="box">
     <h1 id="heading">RESUME</h1>
     <img src="picture.jpg" class="xyz"/>
     <h2 id="abc">About me</h2>
@@ -48,4 +51,7 @@
     <div>Name:Isha Mishra</div>
 <div>Address:Hyderabad</div>
     <a href="https://www.facebook.com">click me</a>
-    </div></body>
+    </div>
+    </body>
+    
+</html>
